libsigsegv link fix

--- a/faq.html
+++ b/faq.html
@@ -367,7 +367,7 @@ character #\u00B3 cannot be represented in the character set CHARSET:ASCII</h3>
    memory</a>.</li>
  <li>If you get a segmentation fault after (or instead of) a "program
   stack overflow" message, please make sure that you had
-  <a href="http://sourceforge.net/projects/libsigsegv">GNU libsigsegv</a>
+  <a href="http://libsigsegv.sourceforge.net/">GNU libsigsegv</a>
   installed when you configured and built CLISP.</li></ul>
 
 <h4>Avoiding stack overflow: Platform-specific</h4>
