--- a/clash.html
+++ b/clash.html
@@ -74,8 +74,8 @@ ENV_PATH        PATH=/bin:/usr/bin:/usr/local/bin:/usr/X11R6/bin
 </pre>
 
 <p>Once you have your CLISP shell set up, you can control the
-environment variables (on Linux) via the linuxlibc6 bindings (see
-<code>${clisp-src}/modules/bindings/linuxlibc6/linux.lisp</code>):
+environment variables (on Linux) via the glibc bindings (see
+<code>${clisp-src}/modules/bindings/glibc/linux.lisp</code>):
 setenv, putenv, getenv, etc.</p>
 
 <h2>NB from SDS</h2>
