--- a/resources.html
+++ b/resources.html
@@ -221,7 +221,7 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
              >http://alvin.jpl.nasa.gov/gat/ftp/http.lsp</a></dd>
  <dt><strong>Oracle</strong> and <strong>FastCGI</strong> modules
   [<a href="http://www.alma.com/staff/hin">John K. Hinsdale</a>]</dt>
- <dd><a href="http://clisp.alma.com/">http://clisp.alma.com/z</a></dd>
+ <dd><a href="http://clisp.alma.com/">http://clisp.alma.com/</a></dd>
  <dt><strong>Screamer</strong> - an extension of Common Lisp that adds
   support for nondeterministic programming
   [<a href="http://www.ece.purdue.edu/~qobi">Jeffrey Mark Siskind</a>]</dt>
