added "I want to help"

--- a/faq.html
+++ b/faq.html
@@ -60,6 +60,7 @@ more questions (and answers!)</p>
  <li><a href="#mailing-lists">Which mailing lists should I subscribe
    to?</a></li>
  <li><a href="#bugs">How do I report bugs?</a></li>
+ <li><a href="#contrib">I want to help!</a></li>
 </ol>
 <hr/>
 
@@ -235,6 +236,22 @@ moved it here.</p>
 <h3 id="bugs">How do I report bugs?</h3>
 
 <p><a href="clisp.html#bugs">Patiently</a>!</p>
+
+<p><a href="#meta">back to Meta</a></p><hr/>
+
+<p><a href="#index">index</a></p><hr/>
+
+<h3 id="contrib">I want to help!</h3>
+
+<p>Please read <a href="impnotes/extend.html">"Extending CLISP"</a> and
+ submit your patch, together with a <code>src/ChangeLog</code> entry
+ (see other entries there for inspiration), to
+ <a href="http://lists.sourceforge.net/lists/listinfo/clisp-devel"
+    >&lt;clisp-devel&gt;</a>.  See also and <code>src/CodingStyle</code>
+ for the programming style we follow.
+ If your patch is more than just a few lines, it is <em>much</em>
+ preferred that you make your patch available on the web and send the
+ link to the list.</p>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
 
