contrib: patches against cvs head

--- a/faq.html
+++ b/faq.html
@@ -247,11 +247,16 @@ moved it here.</p>
  submit your patch, together with a <code>src/ChangeLog</code> entry
  (see other entries there for inspiration), to
  <a href="http://lists.sourceforge.net/lists/listinfo/clisp-devel"
-    >&lt;clisp-devel&gt;</a>.  See also and <code>src/CodingStyle</code>
- for the programming style we follow.
- If your patch is more than just a few lines, it is <em>much</em>
+    >&lt;clisp-devel&gt;</a>.</p>
+
+<p>See <code>src/CodingStyle</code> for the style we follow.</p>
+
+<p>If your patch is more than just a few lines, it is <em>much</em>
  preferred that you make your patch available on the web and send the
  link to the list.</p>
+
+<p>The patch must be against the <a href="http://www.cvshome.org">CVS</a>
+head (reasonably recent).</p>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
 
