--- a/summary.html
+++ b/summary.html
@@ -33,7 +33,9 @@ standard</a>.</p>
 a compiler, <a href="impnotes.html#clos-diff">almost all</a> of CLOS,
 a <a href="impnotes.html#dffi">foreign language interface</a> and
 a <a href="impnotes.html#socket">socket interface</a>.
-An X11 interface is available through CLX and Garnet.
+An <a href="http://www.the-labs.com/X11/XLib-Manual/">X11</a> interface
+is available through <a href="http://www.cliki.net/CLX">CLX</a> and
+<a href="http://garnetlisp.sf.net/">Garnet</a>.
 Command line editing is provided by
 <a href="http://cnswww.cns.cwru.edu/~chet/readline/rltop.html"
    >readline</a>.</p>
