--- a/resources.html
+++ b/resources.html
@@ -64,6 +64,11 @@ the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
  as <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/doc/LISP-tutorial.txt?rev=HEAD"><code>doc/LISP-tutorial.txt</code></a>
  in plain text format.</p>
 
+<p><a href="http://www.aiai.ed.ac.uk/~jeff/clos-guide.html">A Brief
+  Guide to CLOS</a> - also comes with the CLISP distribution
+ as <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/doc/CLOS-guide.txt?rev=HEAD"><code>doc/CLOS-guide.txt</code></a>
+ in plain text format.</p>
+
 <p><a href="http://www.pascalcostanza.de/lisp/guide.html">Highly
   Opinionated Guide to Lisp</a>
  [<a href="mailto:costanza@web.de">Pascal Costanza</a>]</p>
