--- a/summary.html
+++ b/summary.html
@@ -41,9 +41,10 @@ Command line editing is provided by
    >readline</a>.</p>
 
 <p><a href="http://clisp.cons.org/">CLISP</a> runs on microcomputers
-(OS/2, Windows 95/98/2000/NT, Amiga 500-4000, Acorn RISC PC) as well as
-on Unix workstations (GNU/Linux, BSD, SVR4, Sun4, DEC Alpha OSF, HP-UX,
-NeXTstep, SGI, AIX, Sun3 and others) and needs only 2 MB of RAM.</p>
+(OS/2, Windows 95/98/NT/2000/XP, Amiga 500-4000, Acorn RISC PC)
+as well as on Unix workstations (GNU/Linux, BSD, SVR4, Sun4, DEC Alpha
+OSF, HP-UX, NeXTstep, SGI, AIX, Sun3 and others)
+and needs only 2 MB of RAM.</p>
 
 <p><a href="http://clisp.cons.org/">CLISP</a> is
 <a href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>
