--- a/faq.html
+++ b/faq.html
@@ -146,7 +146,7 @@ the resurgence of Nazism.</p>
   Institute</a></li>
  <li><a href="http://www.mideasttruth.com/">YES to peace, NO to
   terror</a></li>
- <li><a href="http://www.palestine-central.com/links.html">More
+ <li><a href="http://www.mideasttruth.com/links.html">More
   links</a></li>
 </ul>
 
