--- a/faq.html
+++ b/faq.html
@@ -273,13 +273,16 @@ head (reasonably recent).</p>
 
 <h3 id="ide">Where is the IDE?</h3>
 
-<p>Use <a href="http://www.gnu.org/software/emacs/">GNU Emacs</a>,
+<p>I use <a href="http://www.gnu.org/software/emacs/">GNU Emacs</a>,
  running CLISP as an "inferior lisp"
  (i.e., CLISP running as an Emacs sub-process).
  Some people prefer <a href="http://ilisp.cons.org/">ILISP</a> to the
  standard Emacs facilities.</p>
 
 <p>See also <a href="http://gclisp.sourceforge.net/">GClisp</a>.</p>
+
+<p>See also <a href="http://www.stud.uni-karlsruhe.de/~unk6/hemlock/"
+ >Portable Hemlock</a>.</p>
 
 <p>See also <a href="http://cl-cookbook.sourceforge.net/windows.html">The
   Common Lisp Cookbook</a></p>
