mention Portable Hemlock http://www.stud.uni-karlsruhe.de/~unk6/hemlock/ Closure Web Browser http://www.stud.uni-karlsruhe.de/~unk6/closure/ update link to CL-GTK http://tenkan.org/clgtk/

--- a/resources.html
+++ b/resources.html
@@ -171,9 +171,9 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   <dd>Original: <a href="ftp://ftp.cis.upenn.edu/pub/kaye/with-wish.tar.Z"
       >ftp://ftp.cis.upenn.edu/pub/kaye/with-wish.tar.Z</a><br/>
     see also <a href="#contrib">contrib</a> above.</dd>
- <dt><strong>CL GTK bindings</strong> [Gilbert Baumann]</dt>
-  <dd><a href="http://www.uni-karlsruhe.de/~unk6/"
-              >http://www.uni-karlsruhe.de/~unk6/</a></dd>
+ <dt><strong>CL-GTK: A Common Lisp Binding for GTK+</strong>
+  [<a href="http://tenkan.org/tim.html">Tim Daly, Jr.</a>]</dt>
+  <dd><a href="http://tenkan.org/clgtk/">http://tenkan.org/clgtk/</a></dd>
  <dt><strong>Hybrid graphic expert system shell</strong>
    [<a href="mailto:hans@math.uni-wuppertal.de">Hans Groschwitz</a>]</dt>
   <dd><a href="http://www.iai.uni-wuppertal.de/EMA-XPS/"
@@ -237,6 +237,14 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
         >http://www.cse.buffalo.edu/sneps/</a><br/>
   <a href="ftp://ftp.cse.buffalo.edu/pub/sneps/"
      >ftp://ftp.cse.buffalo.edu/pub/sneps/</a></dd>
+ <dt><strong>Portable Hemlock</strong> - CL-based Emacs-like editor
+  [<a href="mailto:unk6@stud.uni-karlsruhe.de">Gilbert Baumann</a>]</dt>
+ <dd><a href="http://www.stud.uni-karlsruhe.de/~unk6/hemlock/"
+        >http://www.stud.uni-karlsruhe.de/~unk6/hemlock/</a></dd>
+ <dt><strong>Closure Web Browser</strong>
+  [<a href="mailto:unk6@stud.uni-karlsruhe.de">Gilbert Baumann</a>]</dt>
+ <dd><a href="http://www.stud.uni-karlsruhe.de/~unk6/closure/"
+        >http://www.stud.uni-karlsruhe.de/~unk6/closure/</a></dd>
 </dl>
 
 <p>See also the
