added "Using software to promote a political agenda is unprofessional" mention Jabberwocky (sync with SF)

--- a/faq.html
+++ b/faq.html
@@ -168,6 +168,27 @@ moved it here.</p>
     >this</a> one?
  Good riddance!</p>
 
+<h4>Using software to promote a political agenda is unprofessional!</h4>
+
+<p>Expressing our opinion is a quite natural thing for us, be it the
+artistic preferences, the political views or the religious beliefs.
+The use of the menorah has its roots somewhere between these areas,
+and we are proud to display it.
+If you are unlucky enough to have lost the freedom to express your
+opinion, due to the constraints of a government, society, religion,
+or expectations of "professional relationships", we condole with you.
+The authors of CLISP are not operating under such constraints.
+If you are unhappy about our artistic preferences, political views or
+religious beliefs, you are free to ignore them.</p>
+
+<p>Many scientists have been doing art, politics and religion.
+Ren&eacute; Descartes and Isaak Newton combined mathematics and Christianity.
+Albert Einstein helped the U.S. to counter the danger of an atomic bomb
+in the hands of the Nazis.
+Bram Moolenaar, the author of <a href="http://www.vim.org/">VIM</a>,
+promotes charitable donations to Uganda.</p>
+
+
 <p><a href="#meta">back to Meta</a></p><hr/>
 
 <h3 id="help">How do I ask for help?</h3>
@@ -278,6 +299,8 @@ head (reasonably recent).</p>
  (i.e., CLISP running as an Emacs sub-process).
  Some people prefer <a href="http://ilisp.cons.org/">ILISP</a> to the
  standard Emacs facilities.</p>
+
+<p>See also <a href="http://jabberwocky.sourceforge.net/">Jabberwocky</a>.</p>
 
 <p>See also <a href="http://gclisp.sourceforge.net/">GClisp</a>.</p>
 
