mention CMN and Jabberwocky (sync with SF)

--- a/resources.html
+++ b/resources.html
@@ -245,6 +245,10 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   [<a href="mailto:unk6@stud.uni-karlsruhe.de">Gilbert Baumann</a>]</dt>
  <dd><a href="http://www.stud.uni-karlsruhe.de/~unk6/closure/"
         >http://www.stud.uni-karlsruhe.de/~unk6/closure/</a></dd>
+ <dt><strong>CMN (Common Music Notation)</strong>
+  [<a href="mailto:bil@ccrma.stanford.edu">Bill Schottstaedt</a>]</dt>
+ <dd><a href="http://ccrma-www.stanford.edu/software/cmn/"
+        >http://ccrma-www.stanford.edu/software/cmn/</a></dd>
 </dl>
 
 <p>See also the
@@ -350,6 +354,11 @@ Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
    <a href="http://gclisp.sourceforge.net/">home</a>]</dt>
  <dd>GClisp is a gtk+-2.0 front-end to Common Lisp (clisp).
   It provides an IDE with both a text editor and a running lisp repl.</dd>
+ <dt><strong>Jabberwocky</strong>
+  [<a href="http://sourceforge.net/projects/jabberwocky/">project</a>
+   <a href="http://jabberwocky.sourceforge.net/">home</a>]</dt>
+ <dd>A Lisp IDE: includes a Lisp-aware editor, a source level debugger
+  and a way to interact with Lisp processes.</dd>
 </dl>
 
 <hr/>
